workshop03/bgg-ing.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress 
metadata:
  name: bggapp-ing
  labels:
    name: bggapp-ing
spec:
  ingressClassName: nginx
  rules:
  - host: bgg-146.190.4.104.nip.io
    http:
      paths:
        - path: /v1
          pathType: Prefix
          backend:
            service:
              name: v1-bggapp-svc
              port:
                number: 8080
        - path: /v2
          pathType: Prefix
          backend:
            service:
              name: v2-bggapp-svc
              port:
                number: 8080
  tls:
  - secretName: bgg-tls
    hosts:
    - bgg-146.190.4.104.nip.io
